--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,10 +2,7 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ "dev" ]
-  pull_request:
-    branches: [ "dev" ]
+  workflow_dispatch:
 
 jobs:
   build:
